# fpm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  commitlint.config.js  package.json  pnpm-lock.yaml  renovate.json
.changeset/: README.md  config.json  initial-release.md
.ci/: sync-cargo-version.js
.github/workflows/: ci.yml  release.yml  windows-compat.yml
lang/: README.es.md
openspec/: config.yaml
openspec/changes/archive/2026-07-16-fpm-rust-wrapper/: archive-report.md  design.md  tasks.md  verify-report.md
openspec/changes/cli-friendly-refactor/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/fpm-default-command/: tasks.md
openspec/changes/fpm-rust-wrapper/: design.md  explore.md  proposal.md  tasks.md
openspec/specs/fpm-core/: spec.md
openspec/specs/powershell-shell-integration/: spec.md
openspec/specs/pymanager-ci-installation/: spec.md
openspec/specs/pymanager-delegation/: spec.md
openspec/specs/python-version-switching/: spec.md
openspec/specs/version-file-resolution/: spec.md
sdd/cli-friendly-refactor/: apply-progress.md
sdd/explore/cli-friendly-refactor/: exploration.md
src/: cli.rs  config.rs  error.rs  main.rs  pymanager.rs  shim.rs  version_file.rs
src/commands/: current.rs  default.rs  env_cmd.rs  install.rs  list.rs  list_remote.rs  mod.rs  passthrough.rs  use_cmd.rs
src/services/: mod.rs  pymanager.rs  remote.rs
src/shell/: mod.rs  powershell.rs
src/ui/: formatters.rs
tests/: cli_dispatch.rs  env_cmd.rs  passthrough.rs  use_cmd.rs
(+13 files in other folders)
