[package]
name = "fpy"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A Windows-native Rust wrapper around PyManager for per-session and global Python version switching"
authors = ["Velaides"]
repository = "https://github.com/creativelaides/fpy"
keywords = ["python", "version-manager", "windows", "pymanager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
etcetera = "0.8"
ureq = { version = "2.9", features = ["json"] }
tempfile = "3.10"
junction = "1.2"
toml = "0.8"
pep440_rs = "0.7"
once_cell = "1.20"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"